[package]
edition = "2021"
name = "imguizmo-sys"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
# imgui-sys = "*"

[lib]
bench = false
# crate-type = ["rlib"]
