[package]
edition = "2021"
license = "MIT"
name = "imguizmo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "*"
# Original docking imgui-rs repo. Once the pull request gets merged, we can switch back to the official one...
# See https://github.com/imgui-rs/imgui-rs/pull/619
# imgui-docking = {git = "https://github.com/imgui-rs/imgui-rs.git", features = ["docking"], package = "imgui", optional = true}
imgui-docking = {git = "https://github.com/Rob2309/imgui-rs.git", features = ["docking"], package = "imgui", optional = true}
imgui-normal = {version = "*", package = "imgui", optional = true}
# imguizmo-sys = {git = "https://github.com/IcyTv/imguizmo-rs"}
imguizmo-sys = {path = "../imguizmo-sys"}

[features]
default = ["imgui-normal"]
docking = ["imgui-docking"]
